<resources>
    <string name="app_name">HomeBook</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="password_again">Password again</string>
    <string name="homebook">HOMEBOOK</string>
    <string name="log_in">Log in</string>
    <string name="remember_me">Remember me</string>
    <string name="App_logo">App Logo</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="welcome">Welcome</string>
    <string name="login_with_google">Log in with Google</string>
    <string name="title">Title</string>
    <string name="profile">Profile</string>
    <string name="language">Language</string>
    <string name="about">About</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_photo">Change Profile Photo</string>
    <string name="save">Save</string>
    <string name="create">Create</string>
    <string name="private_checkbox">Private</string>
    <string name="create_home">Create New Home</string>
    <string name="edit_home">Edit Home</string>
    <string name="members">Members</string>
    <string name="invite_member">Invite New Member</string>
    <string name="invite">Invite</string>
    <string name="delete_home">Delete</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="or">OR</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="sign_up_with_facebook">Sign up with Facebook</string>
    <string name="sign_out">Sign out</string>
    <string name="enter_email_password_message">Please enter a Password and an Email.</string>
    <string name="please_enter_email_message">Please enter your Email first.</string>
    <string name="email_was_sent_message">An Email was sent to you to reset your password.</string>
    <string name="please_fill_blanks_message">Please fill out all the blanks.</string>
    <string name="passwords_not_match_message">The given passwords don\'t match.</string>

    <string name="saved_remember_me_preference" translatable="false">remember_me</string>
    <string name="no_internet_message">No Internet</string>
    <string name="please_connect_to_the_internet_message">Please connect to the Internet and try again.</string>
    <string name="ok_button">OK</string>
    <string name="navigation_drawer_close" translatable="false">close</string>
    <string name="navigation_drawer_open" translatable="false">close</string>

    <string name="reminder_set">Set Reminder</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="date">Date</string>
    <string name="date_time">Date and Time</string>
    <string name="notifications">Notifications</string>
    <string name="other">Other</string>
    <string name="my_homes">My Homes</string>
    <string name="settings">Settings</string>
    <string name="user">User</string>
    <string name="edit">Edit</string>
    <string name="admin">Admin</string>
    <string name="home_info">Home Info</string>
    <string name="leave_home">Leave</string>
    <string name="search">Search</string>
    <string name="enter_home_code">Home-Code</string>
    <string name="items">Items</string>
    <string name="item">Item</string>
    <string name="add_item">Add Item</string>
    <string name="total">Total: </string>
    <string name="price">Price</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="statistics">Statistics</string>
    <string name="show_for">Show for</string>
    <string name="total_home_expenses">Total home expenses</string>
    <string name="your_total_expenses">Your total expenses</string>
    <string name="everyone_should_pay">Everyone should pay</string>
    <string name="you_should_pay">You should still pay</string>
    <string name="you_should_get">You should still get</string>
    <string name="details">Details</string>
    <string name="is_added">is Added</string>
    <string name="code">Code</string>
    <string name="delete_receipt">Delete Receipt</string>
    <string name="add_receipt">Add Receipt</string>
    <string name="join_request">wants to enter </string>
    <string name="change_password">Change Password</string>
    <bool name="remember_me_default_value">false</bool>
    <string name="version">Version 1.0</string>
    <string name="about_text">MABEM Team\nPrepared with Love ❤</string>
    <string name="copyright">©</string>
    <string name="abd">Abdurrahman ODABAŞI</string>
    <string name="batikan">Batıkan Bora ORMANCI</string>
    <string name="ecesu">Ecesu ARSLAN</string>
    <string name="mulham">Mulham ALIBRAHIM</string>
    <string name="nur">Muhammednur ŞEHEBİ</string>
    <string name="mabem">Mulham ALIBRAHIM, Ecesu ARSLAN, Abdurrahman ODABAŞI, Batıkan Bora ORMANCI, Muhammednur ŞEHEBİ</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_home">Create new Home</string>
    <string name="new_home_created_successfully">New Home was successfully created.</string>
    <string name="please_enter_name_for_home_message">Please Enter a Name for the Home.</string>
    <string name="new_reminder_added_message">The new Reminder Was added Successfully</string>
    <string name="reminder_deleted_message">Reminder successfully deleted!</string>
    <string name="reminder_updated_message">Reminder successfully updated!</string>
    <string name="new_receipt_added_message">A new Receipt was added successfully!</string>
    <string name="receipt_updated_message">Receipt updated successfully!</string>
    <string name="home_updated_message">Home updated successfully!</string>
    <string name="home_deleted_message">Home was deleted successfully</string>


    <string name="profile_edit_enter_name">Please Enter a valid Name</string>
    <string name="profile_edit_enter_email">Please Enter a valid Email Address</string>
    <string name="profile_updated_successfully">Your Profile has been successfully updated.</string>
    <string name="searched_home_dialog_message_1">Is </string>
    <string name="searched_home_dialog_message_2">" the Home you are looking for?"</string>
    <string name="send_join_request">Send Join Request</string>
    <string name="search_result">Search Result</string>
    <string name="join_request_declined_message">The join request was declined successfully</string>
    <string name="join_request_accepted_message">The join request was accepted successfully</string>
    <string name="invitation_sent_message">Invitation sent successfully</string>
    <string name="member_left_home_message">Member left home successfully</string>
    <string name="join_request_text">wants to join</string>
    <string name="home_accepted_you_text">accepted your join request</string>
    <string name="home_declined_you_text">declined your join request</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="remove_member_warning">Remove this member?</string>
    <string name="delete_receipt_warning">Delete this receipt?</string>
    <string name="delete_home_warning">Delete this home?</string>
    <string name="delete_reminder_warning">Delete this reminder?</string>
    <string name="make_admin_warning">Make this member admin?</string>
    <string name="leave_home_warning">Leave this home?</string>
    <string name="warning">Warning</string>
    <string name="home_feed">Home Feed</string>
    <string name="receipt_info">Receipt Info</string>
    <string name="manage_receipt">Manage Receipt</string>
    <string name="reminders">Reminders</string>
    <string name="this_month">This Month</string>
    <string name="last_month">Last Month</string>

    <string name="remove_last_member_warning_message">You can not remove the last member of the home! </string>

    <string name="delete_last_admin_warning_message">You can not remove the last admin from the home! </string>
    <string name="remove_member_warning_message">Are you sure that you want to remove this member from the home?</string>
    <string name="make_admin_warning_message">Are you sure that you want to make this member admin?</string>
    <string name="remove_last_admin_warning_message">You can not make the last admin of the home a normal member!</string>
    <string name="delete_receipt_warning_message">Are you sure that you want to delete this receipt?</string>
    <string name="delete_home_warning_message">Are you sure that you want to delete this home?\n\nAll receipts and reminders of this home will be also deleted!</string>
    <string name="delete_reminder_warning_message">Are you sure that you want to delete this reminder?</string>
    <string name="leave_home_warning_message">Are you sure that you want to leave this home?</string>
    <string name="edit_email_warning_message">To edit your Email-Address, please relog in!</string>
    <string name="please_enter_name_for_receipt_message">Please enter a name for the receipt.</string>
    <string name="please_enter_name_for_reminder_message">Please enter a name for the reminder.</string>
    <string name="please_enter_item_message">Please enter the item(s) of the receipt.</string>
    <string name="please_enter_date_of_receipt_message">Please enter the date of the receipt.</string>
    <string name="please_enter_date_of_reminder_message">Please enter the date of the reminder.</string>
    <string name="no_text_sharing_app">There is no app that can handle text sharing</string>
    <string name="delete">Delete</string>
    <string name="request_sent_successfully">The request was sent successfully</string>
    <string name="code_of">Code of</string>

</resources>