<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/admin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start|end">

    <TextView
        android:id="@+id/member_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/name" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/admin_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="end"
        android:text="@string/admin" />

    <ImageView
        android:id="@+id/delete_member"
        android:layout_width="40dp"
        android:layout_height="23dp"
        android:layout_weight="1"
        android:contentDescription="@string/delete_home"
        app:srcCompat="@drawable/delete_icon" />

</LinearLayout>