<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/create_home_background">

    <EditText
        android:id="@+id/home_name"
        android:layout_width="242dp"
        android:layout_height="42dp"
        android:layout_marginTop="344dp"
        android:autofillHints=""
        android:background="@drawable/rounded_edit_text"
        android:ellipsize="none"
        android:ems="50"
        android:fadingEdge="horizontal"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:shadowColor="#FAF3F3"
        app:layout_constraintBottom_toTopOf="@+id/create_home_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintCircleRadius="50dp" />

    <CheckBox
        android:id="@+id/private_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/private_checkbox"
        android:textColor="#FFFFFF"
        app:buttonTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/create_home_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_name"
        app:layout_constraintVertical_bias="0.222" />

    <Button
        android:id="@+id/create_home_button"
        android:layout_width="109dp"
        android:layout_height="64dp"
        android:layout_marginBottom="188dp"
        android:text="@string/create"
        android:textAllCaps="false"
        app:backgroundTint="#857C23"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="92dp"
        android:layout_height="80dp"
        android:contentDescription="@string/App_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_home"
        android:textColor="#ACA325"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/logo"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toTopOf="@+id/logo" />
</androidx.constraintlayout.widget.ConstraintLayout>